# CHIP-8

./: CMakeLists.txt
CHIP-8/: CMakeLists.txt
CHIP-8/src/: main.c
libCHIP-8/: CMakeLists.txt
libCHIP-8/include/CHIP-8/: cpu.h  input.h  macros.h  memory.h  mmu.h  ppu.h  timer.h  video.h
libCHIP-8/src/: cpu.c  input.c  memory.c  mmu.c  timer.c  video.c
